auth, membership badges, refactor
implemented auth service with membership badges
